--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "typescript": "~5.6.2",
     "unplugin-swc": "^1.5.1",
     "vite": "^6.0.5",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-singlefile": "^2.1.0"
   },
   "trustedDependencies": [
     "@biomejs/biome",
     "@swc/core"
   ],
-  "dependencies": {
-    "vite-plugin-singlefile": "^2.1.0"
-  }
+  "dependencies": {}
 }
